--- a/loginPage/login.html
+++ b/loginPage/login.html
@@ -21,10 +21,10 @@
                 <h1>Create Account</h1>
                 <!-- Social media icons -->
                 <div class="social-icons">
-                    <a href="#" class="icon" title="Sign up with Google"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon"title="Sign up with Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon"title="Sign up with GitHub"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"title="Sign up with LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#" class="icon"data-tooltip="Google" title="Sign up with Google"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="#" class="icon" data-tooltip="Facebook"title="Sign up with Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="icon"data-tooltip="Github"title="Sign up with GitHub"><i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="icon" data-tooltip="LinkedIn"title="Sign up with LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email for registration</span>
                 <input type="text" placeholder="Name">
@@ -42,10 +42,10 @@
                 <h1>Sign In</h1>
                 <!-- Social media icons -->
                 <div class="social-icons">
-                    <a href="#" class="icon" data-tooltip="Google"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon" data-tooltip="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon" data-tooltip="Github"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon" data-tooltip="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#" class="icon" data-tooltip="Google"title="Sign up with Google"><i class="fa-brands fa-google-plus-g"></i></a>
+                    <a href="#" class="icon" data-tooltip="Facebook"itle="Sign up with Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="icon" data-tooltip="Github"title="Sign up with GitHub"><i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="icon" data-tooltip="LinkedIn"title="Sign up with LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email password</span>
                 <input type="email" placeholder="Email">
