updated home,html to index.html in all files.

--- a/Coach_consultation/Coach_Menu.html
+++ b/Coach_consultation/Coach_Menu.html
@@ -52,7 +52,7 @@
           </a>
           
      <nav class="hidden md:flex space-x-8 text-gray-700 font-medium" role="navigation" aria-label="Primary Navigation">
-      <a class="hover:text-indigo-600 transition focus:outline-none focus:ring-2 focus:ring-indigo-600 rounded" href="/HomePage/home.html" tabindex="0">
+      <a class="hover:text-indigo-600 transition focus:outline-none focus:ring-2 focus:ring-indigo-600 rounded" href="/HomePage/index.html" tabindex="0">
        Home
       </a>
       <a class="hover:text-indigo-600 transition focus:outline-none focus:ring-2 focus:ring-indigo-600 rounded" href="/aboutUS/AboutUs.html" tabindex="0">
@@ -75,7 +75,7 @@
    </div>
    <nav class="hidden md:hidden bg-white border-t border-gray-200" id="mobile-menu" role="navigation" aria-label="Mobile Navigation">
     <div class="px-4 py-4 space-y-1">
-     <a class="block text-gray-700 font-medium py-2 hover:bg-indigo-50 rounded focus:outline-none focus:ring-2 focus:ring-indigo-600" href="/HomePage/home.html" tabindex="0">
+     <a class="block text-gray-700 font-medium py-2 hover:bg-indigo-50 rounded focus:outline-none focus:ring-2 focus:ring-indigo-600" href="/HomePage/index.html" tabindex="0">
       Home
      </a>
      <a class="block text-gray-700 font-medium py-2 hover:bg-indigo-50 rounded focus:outline-none focus:ring-2 focus:ring-indigo-600" href="/aboutUS/AboutUs.html" tabindex="0">
