--- a/Coach_consultation/consultation_Page.html
+++ b/Coach_consultation/consultation_Page.html
@@ -27,7 +27,7 @@
      </span>
     </a>
     <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
-     <a class="hover:text-blue-600 transition" href="/HomePage/home.html">
+     <a class="hover:text-blue-600 transition" href="/HomePage/index.html">
       Home
      </a>
      <a class="hover:text-blue-600 transition" href="/aboutUS/AboutUs.html">
@@ -47,7 +47,7 @@
    </div>
    <!-- Mobile menu -->
    <nav aria-label="Mobile menu" class="hidden md:hidden bg-white border-t border-gray-200" id="mobile-menu">
-    <a class="block px-6 py-3 text-gray-700 font-medium hover:bg-blue-50 hover:text-blue-600" href="/HomePage/home.html">
+    <a class="block px-6 py-3 text-gray-700 font-medium hover:bg-blue-50 hover:text-blue-600" href="/HomePage/index.html">
      Home
     </a>
     <a class="block px-6 py-3 text-gray-700 font-medium hover:bg-blue-50 hover:text-blue-600" href="/aboutUS/AboutUs.html">
