--- a/How_It_Works/info.html
+++ b/How_It_Works/info.html
@@ -44,7 +44,7 @@
         <span>FluentSpeech</span>
       </h1>
       <nav class="space-x-6 text-gray-900 font-medium text-sm sm:text-base">
-        <a class="hover:text-blue-600 transition-colors duration-300" href="/HomePage/home.html">Home</a>
+        <a class="hover:text-blue-600 transition-colors duration-300" href="/HomePage/index.html">Home</a>
         <a class="hover:text-blue-600 transition-colors duration-300" href="/featuresPage/features.html">Features</a>
         <a class="hover:text-blue-600 transition-colors duration-300" href="/CoursesPage/course.html">Courses</a>
         <a class="hover:text-blue-600 transition-colors duration-300" href="/contact us/contact.html">Contact</a>
