--- a/UserFeedback/feedback.html
+++ b/UserFeedback/feedback.html
@@ -34,7 +34,7 @@
                 <ul class="flex space-x-6 text-gray-700 text-sm md:text-base font-medium">
                     <li>
                         <a class="hover:text-gray-900 transition-colors duration-300 flex items-center space-x-1"
-                            href="/HomePage/home.html" aria-label="Home">
+                            href="/HomePage/index.html" aria-label="Home">
                             <i class="fas fa-home"></i>
                             <span class="sr-only">Home</span>
                         </a>
