--- a/UserPanel/user.html
+++ b/UserPanel/user.html
@@ -30,16 +30,16 @@
                 </h1>
             </div>
             <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
-                <a class="hover:text-blue-600 transition" href="/HomePage/home.html" tabindex="0">
+                <a class="hover:text-blue-600 transition" href="/HomePage/index.html" tabindex="0">
                     Home
                 </a>
-                <a class="hover:text-blue-600 transition" href="#" tabindex="0">
+                <a class="hover:text-blue-600 transition" href="/CoursesPage/course.html" tabindex="0">
                     Courses
                 </a>
                 <a class="hover:text-blue-600 transition" href="/community/joinCommunity.html" tabindex="0">
                     Community
                 </a>
-                <a class="hover:text-blue-600 transition" href="#" tabindex="0">
+                <a class="hover:text-blue-600 transition" href="/aboutUS/AboutUs.html" tabindex="0">
                     About
                 </a>
                 <a class="hover:text-blue-600 transition" href="/contact us/contact.html" tabindex="0">
@@ -100,10 +100,10 @@
         <!-- Mobile menu -->
         <nav aria-label="Mobile menu" class="hidden md:hidden bg-white border-t border-gray-200" id="mobile-menu">
             <a class="block px-4 py-3 text-gray-700 hover:bg-blue-50 hover:text-blue-600 font-medium"
-                href="/HomePage/home.html" tabindex="0">
+                href="/HomePage/index.html" tabindex="0">
                 Home
             </a>
-            <a class="block px-4 py-3 text-gray-700 hover:bg-blue-50 hover:text-blue-600 font-medium" href="#"
+            <a class="block px-4 py-3 text-gray-700 hover:bg-blue-50 hover:text-blue-600 font-medium" href="/CoursesPage/course.html"
                 tabindex="0">
                 Courses
             </a>
@@ -111,7 +111,7 @@
                 href="/community/joinCommunity.html" tabindex="0">
                 Community
             </a>
-            <a class="block px-4 py-3 text-gray-700 hover:bg-blue-50 hover:text-blue-600 font-medium" href="#"
+            <a class="block px-4 py-3 text-gray-700 hover:bg-blue-50 hover:text-blue-600 font-medium" href="/aboutUS/AboutUs.html"
                 tabindex="0">
                 About
             </a>
