--- a/community/joinCommunity.html
+++ b/community/joinCommunity.html
@@ -25,10 +25,10 @@
         Supportive Community
       </div>
       <nav class="space-x-6 text-gray-700 font-medium text-sm sm:text-base" aria-label="Primary Navigation">
-        <a href="/HomePage/home.html" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">Home</a>
-        <a href="#" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">About</a>
+        <a href="/HomePage/index.html" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">Home</a>
+        <a href="/aboutUS/AboutUs.html" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">About</a>
         <a href="#" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">Events</a>
-        <a href="#" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">Contact</a>
+        <a href="/contact us/contact.html" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">Contact</a>
       </nav>
     </div>
   </header>
@@ -176,7 +176,7 @@
       <div class="space-x-6">
         <a href="#" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">Privacy Policy</a>
         <a href="#" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">Terms of Service</a>
-        <a href="#" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">Contact</a>
+        <a href="/contact us/contact.html" class="hover:text-blue-600 transition focus:outline-none focus:ring-2 focus:ring-blue-600 rounded">Contact</a>
       </div>
     </div>
   </footer>
