--- a/contact us/contact.html
+++ b/contact us/contact.html
@@ -24,10 +24,10 @@
       Fluent Speech
      </a>
      <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
-      <a class="hover:text-indigo-600 transition" href="/HomePage/home.html">
+      <a class="hover:text-indigo-600 transition" href="/HomePage/index.html">
        Home
       </a>
-      <a class="hover:text-indigo-600 transition" href="#">
+      <a class="hover:text-indigo-600 transition" href="/aboutUS/AboutUs.html">
        About
       </a>
       <a class="hover:text-indigo-600 transition" href="featuresPage/features.html">
@@ -45,10 +45,10 @@
    </div>
    <div class="hidden md:hidden bg-white border-t border-gray-200" id="mobile-menu">
     <nav class="px-4 py-4 space-y-1">
-     <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-indigo-50 hover:text-indigo-600" href="/HomePage/">
+     <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-indigo-50 hover:text-indigo-600" href="/HomePage/index.html">
       Home
      </a>
-     <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-indigo-50 hover:text-indigo-600" href="#">
+     <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-indigo-50 hover:text-indigo-600" href="/aboutUS/AboutUs.html">
       About
      </a>
      <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-indigo-50 hover:text-indigo-600" href="featuresPage/features.html">
