--- a/tongue_twister_Section/tongueT.html
+++ b/tongue_twister_Section/tongueT.html
@@ -31,7 +31,7 @@
       </div>
       
       <nav class="space-x-6 text-[#475569] text-sm md:text-base font-medium">
-        <a href="/HomePage/home.html" class="hover:text-blue-600 transition select-none">Home</a>
+        <a href="/HomePage/index.html" class="hover:text-blue-600 transition select-none">Home</a>
         <a href="/aboutUS/AboutUs.html" class="hover:text-blue-600 transition select-none">About</a>
         <a href="/contact us/contact.html" class="hover:text-blue-600 transition select-none">Contact</a>
       </nav>
