--- a/CoursesPage/course.html
+++ b/CoursesPage/course.html
@@ -30,13 +30,11 @@
                 </span>
             </a>
             <nav class="hidden md:flex space-x-8 text-gray-700 font-semibold">
-                <a class="hover:text-indigo-600 transition" href="/HomePage/home.html">
+                <a class="hover:text-indigo-600 transition" href="/HomePage/index.html">
                     Home
                 </a>
-                <a class="hover:text-indigo-600 transition border-b-2 border-indigo-600 pb-1" href="#">
-                    Courses
-                </a>
-                <a class="hover:text-indigo-600 transition" href="#">
+           
+                <a class="hover:text-indigo-600 transition" href="/aboutUS/AboutUs.html">
                     About
                 </a>
                 <a class="hover:text-indigo-600 transition" href="/contact us/contact.html">
@@ -50,12 +48,10 @@
             </button>
         </div>
         <nav aria-label="Mobile menu" class="md:hidden bg-white border-t border-gray-200 hidden" id="mobile-menu">
-            <a class="block px-6 py-3 text-gray-700 font-semibold hover:bg-indigo-50" href="/HomePage/home.html">
+            <a class="block px-6 py-3 text-gray-700 font-semibold hover:bg-indigo-50" href="/HomePage/index.html">
                 Home
             </a>
-            <a class="block px-6 py-3 text-indigo-600 font-semibold border-l-4 border-indigo-600 bg-indigo-50" href="#">
-                Courses
-            </a>
+            
             <a class="block px-6 py-3 text-gray-700 font-semibold hover:bg-indigo-50" href="/aboutUS/AboutUs.html">
                 About
             </a>
