--- a/aboutUS/AboutUs.html
+++ b/aboutUS/AboutUs.html
@@ -77,7 +77,7 @@
      <nav class="hidden md:flex space-x-8 text-gray-700 font-semibold">
       <a
        class="hover:text-blue-600 focus:text-blue-600 focus:outline-none transition-colors duration-300"
-       href="/HomePage/home.html"
+       href="/HomePage/index.html"
        >Home</a
       >
       <a
@@ -87,7 +87,7 @@
       >
       <a
        class="hover:text-blue-600 focus:text-blue-600 focus:outline-none transition-colors duration-300"
-       href="#"
+       href="/aboutUS/AboutUs.html"
        >About Us</a
       >
       <a
@@ -116,7 +116,7 @@
     >
      <a
       class="block py-2 hover:bg-blue-50 hover:text-blue-600 rounded transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-blue-600"
-      href="/HomePage/home.html"
+      href="/HomePage/index.html"
       >Home</a
      >
      <a
@@ -126,7 +126,7 @@
      >
      <a
       class="block py-2 hover:bg-blue-50 hover:text-blue-600 rounded transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-blue-600"
-      href="#"
+      href="/aboutUS/AboutUs.html"
       >About Us</a
      >
      <a
