--- a/featuresPage/features.html
+++ b/featuresPage/features.html
@@ -28,7 +28,7 @@
                   class="inline-block px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">
                   Join Community
                 </a>
-                <a href="/HomePage/home.html " class="text-blue-600 hover:text-blue-800 text-xl" title="Home">
+                <a href="/HomePage/index.html " class="text-blue-600 hover:text-blue-800 text-xl" title="Home">
                   <i class="fas fa-home"></i>
                 </a>
               </div>
