--- a/progressTracker/tracker.html
+++ b/progressTracker/tracker.html
@@ -37,7 +37,7 @@
     <header class="bg-blue-600 text-white py-4 shadow-md flex items-center justify-between px-6">
         <div class="text-xl font-bold animate-fade-in">Weekly Progress Tracker</div>
         <div class="flex space-x-4">
-          <a href="/HomePage/home.html" class="hover:text-gray-200 transition-colors">
+          <a href="/HomePage/index.html" class="hover:text-gray-200 transition-colors">
             <i class="fas fa-home text-lg"></i>
           </a>
           <a href="/UserPanel/user.html" class="hover:text-gray-200 transition-colors">
